--- a/GameLogic/GameLogic.csproj
+++ b/GameLogic/GameLogic.csproj
@@ -39,8 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Game.cs" />
     <Compile Include="Game4.cs" />
+    <Compile Include="Game6.cs" />
+    <Compile Include="Game9.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
